--- a/IACET_Dispatcher/ReadClientMail.xaml
+++ b/IACET_Dispatcher/ReadClientMail.xaml
@@ -163,7 +163,7 @@
                 </Sequence>
               </If.Else>
             </If>
-            <ui:LogMessage DisplayName="Log Message" sap:VirtualizedContainerService.HintSize="839,91" sap2010:WorkflowViewState.IdRef="LogMessage_8" Level="Info" Message="[&quot;Client mail read sucessful and save attachment &quot;]" />
+            <ui:LogMessage DisplayName="Log Message" sap:VirtualizedContainerService.HintSize="839,91" sap2010:WorkflowViewState.IdRef="LogMessage_8" Level="Info" Message="[&quot;Client mail read sucessful and save attachment in Temp Folder &quot;]" />
           </Sequence>
         </ActivityAction>
       </ui:ForEach.Body>
